# TIPE_how_to_guard_a_museum

./: .gitignore  CMakeLists.txt  README.md  TIPE.tex  code.c  code.h  examples.c  geometry.c  geometry.h  operator.c  operator.h  structures.c  structures.h
src/c_src/: code.c  code.h  foo.py  geometry.c  geometry.h  operator.c  operator.h  structures.c  structures.h
